--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
   <!-- Google Search Console Verification -->
   <meta name="google-site-verification" content="2awhoMlZs2FL9zaVfdMWUcXe8AX1tJJlnOTYoHRqs0g" />
 
-  <!-- Canonical URL -->
+  <!-- Canonical URL here -->
   <link rel="canonical" href="https://www.innovativeminds.lk/" />
 
   <!-- Language & Geo Targeting -->
